# "test/parser/Makefile.am"
#	$Id: Makefile.am,v 1.3 2004/11/02 07:52:27 fang Exp $

AUTOMAKE_OPTIONS = 1.9

SUBDIRS = basic namespace param array process datatype \
	template typedef connect
# coming eventually:
# channel

EXTRA_DIST = 
CLEANFILES =
DISTCLEANFILES =

include $(top_srcdir)/test/Make.test

