# "test/parser/Makefile.am"
#	$Id: Makefile.am,v 1.4 2005/05/19 18:43:39 fang Exp $

AUTOMAKE_OPTIONS = 1.9

SUBDIRS = basic namespace param array process datatype \
	template typedef connect prs
# coming eventually:
# channel

EXTRA_DIST = 
CLEANFILES =
DISTCLEANFILES =

include $(top_srcdir)/test/Make.test

