# "test/parser/Makefile.am"
#	$Id: Makefile.am,v 1.4.2.1 2005/05/25 00:41:47 fang Exp $

AUTOMAKE_OPTIONS = 1.9

SUBDIRS = basic namespace param array process datatype \
	template typedef connect prs
# channel -- soon

EXTRA_DIST = 
CLEANFILES =
DISTCLEANFILES =

include $(top_srcdir)/test/Make.test

